many adjustments to get parity between mvn command line run and the ide; it is all that randomization